# rabin-williams-signatures

./: .gitignore  .replit  Cargo.toml  README.md  foundry.toml
contracts/src/: RabinWilliamsVerifier.sol
contracts/test/: RabinWilliamsVerifier.t.sol  RabinWilliamsVerifierMath.t.sol  RabinWilliamsVerifierModExp.t.sol  RabinWilliamsVerifierTransformations.t.sol
contracts/test/fixtures/: private_key.hex  public_key.hex  signature.hex
src/: errors.rs  hash.rs  keys.rs  lib.rs  main.rs  signing.rs  utils.rs
